# AI_project

./: README.md  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/home/: .env  views.py
app/home/static/: script.js  style.css
app/home/templates/: index.html
